# Newtrading

./: .gitignore  CMakeLists.txt  README.md  config.example.json
.github/workflows/: ci.yml
data/aggregates/: NSE_EQ_INE002A01018_hourly.tsv
data/quotes/: NSE_EQ_INE002A01018_1681497000000_1776191400000.meta.json  NSE_EQ_INE002A01018_2023-04-15_2023-05-14.json  NSE_EQ_INE002A01018_2023-04-15_2023-05-14.meta.json  NSE_EQ_INE002A01018_2023-04-15_2023-05-14.tsv  NSE_EQ_INE002A01018_2023-05-15_2023-06-13.json  NSE_EQ_INE002A01018_2023-05-15_2023-06-13.meta.json  NSE_EQ_INE002A01018_2023-05-15_2023-06-13.tsv  NSE_EQ_INE002A01018_2023-06-14_2023-07-13.json  NSE_EQ_INE002A01018_2023-06-14_2023-07-13.meta.json  NSE_EQ_INE002A01018_2023-06-14_2023-07-13.tsv  NSE_EQ_INE002A01018_2023-07-14_2023-08-12.json  NSE_EQ_INE002A01018_2023-07-14_2023-08-12.meta.json  NSE_EQ_INE002A01018_2023-07-14_2023-08-12.tsv  NSE_EQ_INE002A01018_2023-08-13_2023-09-11.json  NSE_EQ_INE002A01018_2023-08-13_2023-09-11.meta.json  NSE_EQ_INE002A01018_2023-08-13_2023-09-11.tsv  NSE_EQ_INE002A01018_2023-09-12_2023-10-11.json  NSE_EQ_INE002A01018_2023-09-12_2023-10-11.meta.json  NSE_EQ_INE002A01018_2023-09-12_2023-10-11.tsv  NSE_EQ_INE002A01018_2023-10-12_2023-11-10.json  (+97 more)
scripts/: download_upstox_history.py  keys.txt  split_large_json_array.py
src/: HistoricalDataManager.cpp  HistoricalDataManager.hpp  InstrumentKeyManager.cpp  InstrumentKeyManager.hpp  historical_demo.cpp  main.cpp
tests/: historical_data_manager_test.cpp  instrument_key_manager_regression.cpp
tools/: run_historical_query.cpp
